--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brics-unit-basket",
+  "name": "brics-twap-server",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
-  }
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "node-fetch": "^3.3.2"
+  },
+  "type": "module"
 }
