--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "brics-twap-server",
+  "name": "brics-unit-basket",
+  "type": "module",
   "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
+  "engines": {
+    "node": ">=18"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "node-fetch": "^3.3.2"
-  },
-  "type": "module"
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
+  }
 }
