--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "brics-unit-basket",
-  "type": "module",
   "version": "1.0.0",
+  "type": "module",
+  "main": "server.js",
   "engines": {
-    "node": ">=18"
+    "node": "18.x"
   },
   "dependencies": {
     "express": "^4.19.2",
